Case insensitive highlighting. z-index fix for body. Prevent scroll events from crossing iframe boundary.

--- a/churnalism_us/sidebyside/static/styles/search_result.css
+++ b/churnalism_us/sidebyside/static/styles/search_result.css
@@ -1,3 +1,6 @@
+body {
+	z-index: 2137483605;
+}
 #source-box { 
 	position: absolute;
 	width: 400px;
